# server_metrics

./: Cargo.toml
src/: discord.rs  main.rs  systeminfo.rs
