[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = {version = "0.29.4", default-features = false}
reqwest = {version = "0.11.18", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.26"
